--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-code/Data\ Analysis\ Code/Researchers\ Relation\ Network/ linguist-vendored=true
+code/Data Analysis Code/Researchers Relation Network/d3.v2.js linguist-vendored
