--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 code/Data?Analysis?Code/Researchers?Relation?Network/* linguist-vendored
-*.ipynb linguist-language=Python
+**.ipynb linguist-language=Python
