--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-code/Data?Analysis?Code/Researchers?Relation?Network/d3?v2.js linguist-vendored
+code/Data?Analysis?Code/Researchers?Relation?Network/d3.v2.js -linguist-detectable
 **.ipynb linguist-language=Python
