--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-code/Data?Analysis?Code/Researchers?Relation?Network/d3?v2.js linguist-detectable=false
+code/Data?Analysis?Code/Researchers?Relation?Network/*.v2.js linguist-vendored
+
 **.ipynb linguist-language=Python
