--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-code/Data?Analysis?Code/Researchers?Relation?Network/d3*.js linguist-vendored
+d3* linguist-vendored
 
 **.ipynb linguist-language=Python
