--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-d3* linguist-vendored
+/code/Data\ Analysis\ Code/Researchers\ Relation\ Network/*.js linguist-vendored
 
 **.ipynb linguist-language=Python
