--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-/code/Data\ Analysis\ Code/Researchers\ Relation\ Network/**.py linguist-vendored
+/code/Data\ Analysis\ Code/Researchers\ Relation\ Network/** linguist-vendored
 
 **.ipynb linguist-language=Python
