--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-code/Data\ Analysis\ Code/Researchers\ Relation\ Network/** linguist-vendored
+code/Data\ Analysis\ Code/Researchers\ Relation\ Network/*.js linguist-vendored
